Update Bikes in Brussels - API to CSV.ipynb
I updated Online Tableau link.

--- a/Bike counts api/API to CSV/Bikes in Brussels - API to CSV.ipynb
+++ b/Bike counts api/API to CSV/Bikes in Brussels - API to CSV.ipynb
@@ -18,7 +18,7 @@
     "For more information on the API, please visit the [Brussels open datastore documentation](https://data-mobility.brussels/bike/api/counts/).\n",
     "\n",
     "As a reminder, our ultimate goal is to display traffic data as well as other mobility data such as this one on a dynamic map of Brussels.\n",
-    "You can check the latest version of our map on [our Tableau Public link](https://public.tableau.com/profile/remy2092#!/vizhome/TrafficinBrussels/TrafficinBrussels) (a new link with hourly refreshed map will be published soon)."
+    "You can check the latest version of our map on [our Tableau Public link](https://eu-west-1a.online.tableau.com/t/thimremyanalytics/views/BrusselsMobility-BigQuery/TrafficinBrussels1-mininterval?:device=phone&:showAppBanner=false&:devicepreviewmode=true&:display_count=n&:showVizHome=n&:origin=viz_share_link) (you will have to create an account)."
    ]
   },
   {
