--- a/Traffic counts api/API to BQ/Traffic in Brussels - API to BQ.ipynb
+++ b/Traffic counts api/API to BQ/Traffic in Brussels - API to BQ.ipynb
@@ -18,7 +18,7 @@
     "For more information on the API, please visit the [Brussels open datastore documentation](https://data-mobility.brussels/traffic/api/counts/).\n",
     "\n",
     "As a reminder, our ultimate goal is to display traffic data as well as other mobility data on a dynamic map of Brussels.\n",
-    "You can check the latest version of our map on [our Tableau Online link](https://eu-west-1a.online.tableau.com/t/thimremy/views/TrafficinBrussels/TrafficinBrussels?iframeSizedToWindow=true&:embed=y&:showAppBanner=false&:display_count=no&:showVizHome=no&:origin=viz_share_link) (a new link with hourly refreshed map will be published soon)."
+    "You can check the latest version of our map on [our Tableau Online link](https://eu-west-1a.online.tableau.com/t/thimremyanalytics/views/BrusselsMobility-BigQuery/TrafficinBrussels1-mininterval?:device=phone&:showAppBanner=false&:devicepreviewmode=true&:display_count=n&:showVizHome=n&:origin=viz_share_link) (you will have to create an account)."
    ]
   },
   {
